@@ -11,6 +11,7 @@ This project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.htm
 ### Changed
 - No Root Tool now automatically moves to the next patch
 - Flood tools now retain their settings across patches
+- Improved accuracy of click locations
 
 ## [v0.7.7] - 2020-05-09
 ### ADDED
